--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/link.scss";
+@import "./blocks/page.scss";
+@import "./blocks/benefits.scss";
+@import "./blocks/presentation.scss";
+@import "./blocks/about-us.scss";
+@import "./blocks/technology.scss";
+@import "./blocks/testimonials.scss";
+@import "./blocks/features.scss";
+@import "./blocks/contact-us.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/social.scss";
